change database settings

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ PORT = 875
 // Database Use
 DBUSER = root
 DBNAME = casinc_db
-DBPASS = nkDrUHsw
+DBPASS = some_pass
 DBPORT = 3306
-DBHOST = 127.0.0.1
+DBHOST = 149.102.225.63
 // Error Page Use
 TITLE = Error 404
 
