change env file settings

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DBUSER = root
 DBNAME = casinc_db
 DBPASS = some_pass
 DBPORT = 3306
-DBHOST = 149.102.225.63
+DBHOST = localhost
 // Error Page Use
 TITLE = Error 404
 
